# audio-player

./: .rustfmt.toml  Cargo.toml  README.md
src/: main.rs
src/app/: ctx.rs  handler.rs  login.rs  menu.rs  mod.rs  music.rs  player.rs  routing.rs  run.rs  time.rs
src/app/command/: home_command.rs  mod.rs  playlist_command.rs  track_command.rs
src/app/ctx/: mod.rs
src/app/ctx/player/: mod.rs  player_entity.rs
src/app/modules/: mod.rs
src/app/modules/home/: home_controller.rs  home_serivce.rs  home_view.rs  mod.rs
src/app/modules/main/: main_controller.rs  main_view.rs  menu_view.rs  mod.rs
src/app/modules/playlist/: mod.rs  playlist_controller.rs  playlist_entity.rs  playlist_repository.rs  playlist_service.rs  playlist_view.rs
src/app/modules/track/: external_track_view.rs  mod.rs  track_controller.rs  track_entity.rs  track_service.rs  track_view.rs
src/domains/: main_menu_entity.rs  menu_entity.rs  mod.rs  playlist_controller.rs  playlist_entity.rs  route.rs  track_entity.rs
src/infra/: mod.rs  next.rs  request.rs  route.rs  router.rs
src/modules/: mod.rs
src/modules/main/: main_controller.rs  mod.rs
src/modules/player/: player_entity.rs  time.rs
src/modules/playlist/: mod.rs  playlist_controller.rs  playlist_entity.rs  playlist_repository.rs
src/modules/track/: mod.rs  track_controller.rs  track_entity.rs
src/utils/: colors.rs  console.rs  menu.rs  menu_factory.rs  mod.rs  view.rs
src/views/: error_view.rs  menu_view.rs  mod.rs  playlist_view.rs  track_view.rs
