[package]
name = "audio-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.15.0"
terminal-menu = "2.0.2"
thiserror = "1.0.24"
rpassword = "6.0"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1.18.2", features = ["full"] }
regex = "1.5"
crossterm = "0.22.*"
indicatif = "0.16.2"
futures-util = "0.3.21"

